[package]
name = "ultimate-voxel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.20.1"
pollster = "0.3"
bytemuck = { version = "1.16.1", features = [ "derive" ] }
rand = "0.8.5"
cgmath = "0.18"
noise = "0.9.0"

[features]
default = []
rasterization = []
